2010-08-22  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Bumped to version 0.51. Fixing more problems.

  * MANIFEST: Added more data files to MANIFEST

  * MANIFEST, t/04_mps.t, t/data/stevebaker.xml, t/data/talkcarswell.xml,
  t/mprc: Added some more tests.

  * lib/Perlanet/Trait/Tidy.pm: Minor reformatting.

  * lib/Perlanet.pm: Refactoring clean_entries method.

  * lib/Perlanet/Trait/YAMLConfig.pm: Documentation typo.

  * lib/Perlanet.pm: Fixed documentation.

  * lib/Perlanet/Trait/OPML.pm: Fixed broken OPML handling.

  * t/testrc: Added 'entries_per_feed' config option for tests.

  * lib/Perlanet.pm: Correct typo

  * MANIFEST, t/02_phases.t: Added tests for individual phases of the process.

2010-08-21  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Reinstating the "entries_per_feed" support. Not sure when
  it went missing. Renaming more config settings back to what they should be.

  * lib/Perlanet/Trait/OPML.pm: Fixed names of the attributes.

  * t/01_basic.t: Changed calls to reflect corrected config names.

  * lib/Perlanet.pm: Fix typo.

  * t/testrc: Fix config format.

  * lib/Perlanet/Simple.pm: Reformatting.

  * lib/Perlanet.pm: Bump to version 0.50.

  * lib/Perlanet/Simple.pm, lib/Perlanet/Trait/Cache.pm,
  lib/Perlanet/Trait/FeedFile.pm, lib/Perlanet/Trait/OPML.pm,
  lib/Perlanet/Trait/Scrubber.pm, lib/Perlanet/Trait/TemplateToolkit.pm,
  lib/Perlanet/Trait/Tidy.pm, lib/Perlanet/Trait/YAMLConfig.pm: Minor
  reformatting.

  * lib/Perlanet.pm: Reformatting.

  * lib/Perlanet.pm: Refactored the calls in the main run method. Now they seem
  to work.

  * t/testrc: Changes to reflect the new format for author details.

2010-08-19  Dave Cross <dave@mag-sol.com>

  * bin/perlanet, lib/Perlanet.pm, lib/Perlanet/Trait/FeedFile.pm,
  lib/Perlanet/Trait/TemplateToolkit.pm: Attempting to get perlanet
  comment-line program working again.

2010-08-18  Dave Cross <dave@dave.org.uk>

  * MANIFEST: Added missing files.
